--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven { url 'https://jitpack.io' }
         maven { url "https://plugins.gradle.org/m2/" }
     }
@@ -11,55 +12,37 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
-apply plugin: 'org.jetbrains.dokka'
-apply from: rootProject.file('gradle/publish.gradle')
+ext.configuredVersion = project.hasProperty("releaseVersion") ? project.releaseVersion : project.version
 
+allprojects {
+    group = "network.commercio.sdk"
+    version = configuredVersion
 
-repositories {
-    jcenter()
-    mavenCentral()
-    maven { url 'https://jitpack.io' }
+    apply plugin: "kotlin"
+
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+
+    apply from: rootProject.file('gradle/dokka.gradle')
+    apply from: rootProject.file('gradle/publish.gradle')
+
+    compileKotlin {
+        kotlinOptions {
+            freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+        }
+    }
 }
 
-dependencies {
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+afterEvaluate {
+    task dokkaWebsite(type: dokka.getClass()) {
+        outputFormat = 'kotlin-website'
+        outputDirectory = "${rootProject.projectDir}/apidoc"
 
-    // Crypto
-    implementation "com.github.komputing:kethereum:$kethereum_version"
-    implementation "com.github.commercionetwork:sacco.kt:$sacco_version"
-    implementation "org.bitcoinj:bitcoinj-core:0.14.7"
+        kotlinTasks { allCompileKotlinTasks }
 
-
-    // Serialization
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.0.1"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7"
-
-    // Networking
-    implementation "io.ktor:ktor-client:$ktor_version"
-    implementation "io.ktor:ktor-client-jackson:$ktor_version"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
-
-    // --------------------------
-    // --- Test dependencies
-    // --------------------------
-
-    testImplementation "junit:junit:4.12"
-    testImplementation "io.mockk:mockk:1.9.3"
-}
-
-sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+        reportUndocumented = false
+    }
 }
