--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
 rootProject.name = 'commerciosdk'
+enableFeaturePreview('GRADLE_METADATA')
 
+def includeEx(String name) {
+    include name
+    project(name).projectDir = "$rootDir${name.replace(':', '/')}" as File
+}
+
+includeEx ':core'
