--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,4 +13,11 @@ dependencies {
     implementation "io.ktor:ktor-client-jackson:$ktor_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
+
+    // ------------
+    // --- Tests
+    // ------------
+
+    api "io.ktor:ktor-client-mock-jvm:$ktor_version"
+    api "io.mockk:mockk:$mockk_version"
 }
