--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,3 @@
 rootProject.name = 'commerciosdk'
-enableFeaturePreview('GRADLE_METADATA')
 
-def includeEx(String name) {
-    include name
-    project(name).projectDir = "$rootDir${name.replace(':', '/')}" as File
-}
-
-includeEx ':core'
+include ':core'
