--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ apply from: rootProject.file('gradle/publish.gradle')
 
 repositories {
     jcenter()
-    mavenCentral()
     mavenLocal()
+    mavenCentral()
     maven { url 'https://jitpack.io' }
 }
 
@@ -33,10 +33,11 @@ dependencies {
     compile "com.github.commercionetwork:sacco.kt:$sacco_version"
 
     // Networking
-    compile "io.ktor:ktor-client:$ktor_version"
+    compile "io.ktor:ktor-client-okhttp:$ktor_version"
     compile "io.ktor:ktor-client-jackson:$ktor_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.retrofit2:converter-jackson:$retrofit_version"
+    compile "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // ------------
     // --- Tests
