--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
 
     // Crypto
     compile "com.github.komputing:kethereum:$kethereum_version"
-    compile "com.github.commercionetwork:sacco.kt:$sacco_version"
+    //compile "com.github.commercionetwork:sacco.kt:$sacco_version"
+    compile "org.bitcoinj:bitcoinj-core:0.15.1" // you need it
+    compile fileTree(dir: 'libs', include: '*.jar') 
 
     // Networking
     compile "io.ktor:ktor-client-okhttp:$ktor_version"
