fix version sacco clean code

--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,8 @@ dependencies {
 
     // Crypto
     compile "com.github.komputing:kethereum:$kethereum_version"
-    compile "org.bitcoinj:bitcoinj-core:0.15.1" //add
+    compile "org.bitcoinj:bitcoinj-core:0.15.1"
     compile "com.github.commercionetwork:sacco.kt:$sacco_version"
-
-
 
     // Networking
     compile "io.ktor:ktor-client-okhttp:$ktor_version"
@@ -44,7 +42,6 @@ dependencies {
 
     // X509 creation
    compile "org.bouncycastle:bcpkix-jdk15on:$bouncycastle_version"
-
 
     // ------------
     // --- Tests
