--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven { url 'https://repo1.maven.org/maven2/' }
 }
 
 dependencies {
@@ -64,3 +65,4 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
